--- a/.travis.yml
+++ b/.travis.yml
@@ -10,13 +10,7 @@ jobs:
       - pip install -e .
     script: python -m pytest
   - stage: Testing with Python 3.7
-    python: '3.7'
-    sudo: required
-    dist: xenial
-    install:
-      - pip install -r requirements-dev.txt
-      - pip install -e .
-      - pip install pytest-cov codecov
+    pythov codecov
     script:
       - python -m pytest
       - mypy jikanpy
